<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adanilenka.quizapp.ResultActivity">

    <fragment
        android:id="@+id/fr_register"
        android:name="com.example.adanilenka.quizapp.fragment.RegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:layout="@layout/fragment_register" />


    <TextView
        android:id="@+id/result"
        android:layout_width="276dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="188dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:onClick="onClickSubmit"
        android:text="@string/str_submit"
        android:visibility="visible" />


    <fragment
        android:id="@+id/fr_result"
        android:name="com.example.adanilenka.quizapp.fragment.ResultFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/fr_allResult"
        android:name="com.example.adanilenka.quizapp.fragment.AllResultsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:layout="@layout/fragment_all_results" />

    <Button
        android:id="@+id/buttonTry"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:onClick="onClickTryAgain"
        android:text="@string/str_try"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:onClick="onClickResult"
        android:text="@string/str_results_but"
        android:visibility="invisible" />

</RelativeLayout>
